--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1373,7 +1373,7 @@ div.controls {
 }
 
 #main-wrap #image-slider {
-    background-image: url("../img/about.JPG");
+    background-image: url("../img/about.jpg");
     filter: blur(5px);
 
     height: 100VH; 
@@ -1427,6 +1427,7 @@ div.controls {
     right: 0;
     width: 100%;
     height: 80vh;
+    border: 3px solid #222;
 }
 
 #main-wrap #text-header {
