--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1380,7 +1380,8 @@ div.controls {
     height: 100VH; 
     
     z-index: 2;
-    margin-top: -80px;  
+    margin-top: -80px; 
+    /* margin-bottom: -105px;  */
   /* background-color: rgba(255, 255, 255, 0.4);  */
 }
 
@@ -1391,7 +1392,7 @@ div.controls {
     font-weight: bold;
     border: 3px solid #f1f1f1;
     position: absolute;
-    top: 55%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
@@ -1400,24 +1401,30 @@ div.controls {
     text-align: center;
   }
 
-#main-wrap #text-slider .container {
-  position: relative;
-  z-index: 3;
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+#main-wrap #usp-text {
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    top: 71%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
 }
 
-#main-wrap #text-slider .container h2 {
-  padding-left: 10px;
-}
-
-@media screen and (max-width: 1300px) {
-  #main-wrap #text-slider .container h2 {
-    padding-left: 8px;
-  }
+#main-wrap #button {
+    /* color: white; */
+    font-weight: bold;
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
 }
 
 .responsive-iframe {
@@ -1474,6 +1481,12 @@ div.controls {
   width: 100%;
   position: relative;
   z-index: 2;
+}
+
+#main-wrap .hrtag {
+    height: 3px; 
+    background-color: black; 
+    margin: 0%;
 }
 
 #main-wrap #bottom-wrap {
@@ -1562,6 +1575,8 @@ div.controls {
     height: 500px;
   }
 }
+
+
 
 @media screen and (max-width: 480px) and (min-width: 410px) {
   #main-wrap #bottom-wrap #news .row .carousel-news {
