--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,10 +199,17 @@ h3.big {
   margin-bottom: 50px;
 }
 
+@media screen and (max-width: 710px) {
+  h3.big {
+    font-size: 28px;
+    line-height: 35px;
+  }
+}
+
 @media screen and (max-width: 410px) {
   h3.big {
-    font-size: 26px;
-    line-height: 31px;
+    font-size: 17px;
+    line-height: 24px;
   }
 }
 
@@ -1399,7 +1406,45 @@ div.controls {
     width: 80%;
     padding: 20px;
     text-align: center;
-  }
+}
+
+h1.custom {
+    font-size: 50px;
+    line-height: 70px;
+}
+  
+@media screen and (max-width: 1300px) {
+    h1.custom {
+      font-size: 40px;
+      line-height: 55px;
+    }
+}
+  
+@media screen and (max-width: 767px) {
+    h1.custom {
+        font-size: 35px;
+        line-height: 50px;
+    }
+}
+  
+@media screen and (max-width: 480px) {
+    h1.custom {
+        font-size: 30px;
+        line-height: 40px;
+    }
+} 
+  
+h2.custom {
+    font-size: 15px;
+    line-height: 31px;
+}
+  
+@media screen and (max-width: 410px) {
+    h2.custom {
+        font-size: 12px;
+        line-height: 23px;
+    }
+}
 
 #main-wrap #usp-text {
     color: white;
@@ -1434,7 +1479,7 @@ div.controls {
     bottom: 0;
     right: 0;
     width: 100%;
-    height: 80vh;
+    height: fit-content;
     border: 3px solid #222;
 }
 
